--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 beautifulsoup4==4.8.1
+decorator==4.4.1
 lxml==4.4.1
 metapy==0.2.13
+networkx==2.4
+nltk==3.4.5
+numpy==1.17.4
 pkg-resources==0.0.0
+six==1.13.0
 soupsieve==1.9.4
